# pic2lines

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: configuration.cpp  configuration.hpp  crossesdrawer.cpp  crossesdrawer.h  crossesdrawer.hpp  crossesprocessor.cpp  crossesprocessor.h  drawer.cpp  drawer.h  drawer.hpp  drawerfactory.cpp  drawerfactory.hpp  gcodeconfig.cpp  gcodeconfig.hpp  gcodegenerator.cpp  gcodegenerator.h  gcodeoutputgenerator.cpp  gcodeoutputgenerator.h  gcodeoutputgenerator.hpp  gui.cpp  gui.hpp  image.cpp  image.h  image.hpp  jpeg.cpp  jpeg.h  jpeg.hpp  localtypes.hpp  main.cpp  output.cpp  output.h  outputconfig.cpp  outputconfig.hpp  outputgenerator.cpp  outputgenerator.h  outputgenerator.hpp  pic2lines.cpp  pic2lines.h  pic2lines.hpp  point.h  (+19 more)
src/gui/: fltkgui.cpp  fltkgui.fd  fltkgui.hpp  fltkhelpers.cpp  fltkhelpers.hpp
tests/: CMakeLists.txt  expectedGcodeConfig.json  test_gcodeconfig.cpp
